--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,10 @@
     <title>Cover Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <!-- <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet"> -->
 
     <!-- Custom styles for this template -->
-    <link href="{% static "css/cover.css" %}" rel="stylesheet">
+    <!-- <link href="{% static "css/cover.css" %}" rel="stylesheet"> -->
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -36,7 +36,7 @@
 
         <div class="cover-container">
 
-          <div class="masthead clearfix">
+          <!-- <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Cover</h3>
               <nav>
@@ -47,13 +47,17 @@
                 </ul>
               </nav>
             </div>
-          </div>
+          </div> -->
 
           <div class="inner cover">
             <h1 class="cover-heading">Make a graph.</h1>
             <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+              <form action="/" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Submit" />
+              </form>
             </p>
           </div>
 
